<resources>
    <string name="app_name">Happy Buy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search" />
    <string name="cart">Cart</string>
    <string name="add_new_product">Add New Product</string>
    <string name="todo">TODO</string>
    <string name="check_new_orders">Check New Orders</string>
    <string name="logout">Logout</string>
    <string name="i_m_an_admin">I\'m an Admin?</string>
    <string name="i_m_not_an_admin">I\'m not an Admin?</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_orders">New Orders</string>
    <string name="products">Products</string>
    <string name="total_price">Total Price</string>
    <string name="congratulations_your_final_order_has_been_placed_successfully_soon_it_will_be_verified">Congratulations, Your Final order has been placed successfully. Soon it will be verified</string>
    <string name="next">Next</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="please_write_your_shipment_details">Please write your Shipment Details</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_home_address">Your Home Address</string>
    <string name="your_city_name">Your City Name</string>
    <string name="confirm">Confirm</string>
    <string name="find_discover_choose_and_buy_anything_online">Find, Discover, Choose and Buy anything online.</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="welcome">Welcome!</string>
    <string name="explore_new_way_of_shopping">Explore new way of shopping</string>
    <string name="user">user</string>
    <string name="user_name">User Name</string>
    <string name="address_city">Address,City</string>
    <string name="date_time">Date Time</string>
    <string name="show_user_order_product">Show User Order Product</string>
    <string name="product_description">Product Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="change_profile">Change Profile</string>
    <string name="address">Address</string>
    <string name="add_product">Add Product</string>

</resources>