<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmFinalOrderActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"

        android:text="@string/please_write_your_shipment_details"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/shippment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/your_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/shippment_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shippment_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/your_phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/shippment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shippment_phone_number"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/your_home_address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/shippment_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shippment_address"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/your_city_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/confirm_final_order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="45dp"
        android:background="@drawable/buttons"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
</RelativeLayout>